# This is the TOML pyproject for Kratos core.

title = "KratosMultiphysics Core"

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "KratosMultiphysics"
    description = "Kratos Multiphysics Python Framework"
    requires-python = ">=3.8"
    dynamic = ["version"]
    authors = [
        { name = "Kratos Multiphysics Developers", email = "kratos@cimne.upc.edu" },
    ]
    dependencies = [
        "numpy>=1.20"
    ]

# List of binaries for this application 
# (This is a Kratos build script extension and will not work with python build)
[kratos]
    libs = [
        "Kratos.*",
        "KratosCore.*",
        "KratosCore.*",
        "KratosMPICore.*",
        "KratosMPI.*",
        "zlib.*",
        "libz.*"
    ]

[tool.hatch.build.targets.wheel]
    include = [
        # Python Interface
        "KratosMultiphysics/*.py",
        "KratosMultiphysics/mpi/*.py",
        "KratosMultiphysics/modelers/*.py",
        "KratosMultiphysics/orchestrators/*.py",
        "KratosMultiphysics/response_functions/*.py",

        # Hinting
        "KratosMultiphysics/*.pyi"
    ]    

# # Hook to Build Properties
[tool.hatch.build.targets.wheel.hooks.custom]
    path = "hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
    libs = "KratosMultiphysics/.libs"

[tool.hatch.build.targets.editable]
    include = [
        "KratosMultiphysics/**/*.py",
        "KratosMultiphysics/**/*.pyi"
    ]

[tool.hatch.build.targets.editable.force-include]
    libs = "KratosMultiphysics/.libs"

# Hook to Metadata
[tool.hatch.metadata.hooks.custom]
    path = "hatch_build.py"
