# This is the TOML pyproject for Kratos core.

title = "KratosMultiphysics Core"

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "KratosMultiphysics"
    description = """
        KRATOS Multiphysics ("Kratos") is a framework for building parallel,
        multi-disciplinary simulation software, aiming at modularity,
        extensibility, and high performance. Kratos is written in C++,
        and counts with an extensive Python interface.
    """
    readme = {"file" = "README.md", "content-type" = "text/markdown"}
    license = {text = "BSD-4-Clause"}
    authors = [
        {name="Kratos Team", email="kratosmultiphysics@gmail.com"}
    ]
    requires-python = ">=3.8"
    dependencies = [
        "numpy>=1.20",
        "pytest"
    ]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: C++",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Natural Language :: English",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers"
    ]
    dynamic = ["version"]

# List of binaries for this application 
# (This is a Kratos build script extension and will not work with "python build")
[kratos]
    libs = [
        "Kratos.*",
        "KratosMPI.*",
        "KratosCore.*",
        "libKratosCore.*",
        "KratosMPICore.*",
        "libKratosMPICore.*",
        "zlib.*",
        "libz.*"
    ]

[tool.hatch.build.targets.wheel]
    include = [
        # Python Interface
        "KratosMultiphysics/*.py",
        "KratosMultiphysics/mpi/*.py",
        "KratosMultiphysics/modelers/*.py",
        "KratosMultiphysics/orchestrators/*.py",
        "KratosMultiphysics/response_functions/*.py",

        # Hinting
        "KratosMultiphysics/*.pyi"
    ]    

# # Hook to Build Properties
[tool.hatch.build.targets.wheel.hooks.custom]
    path = "hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
    libs = "KratosMultiphysics/.libs"

[tool.hatch.build.targets.editable]
    include = [
        "KratosMultiphysics/**/*.py",
        "KratosMultiphysics/**/*.pyi"
    ]

[tool.hatch.build.targets.editable.force-include]
    libs = "KratosMultiphysics/.libs"

# Hook to Metadata
[tool.hatch.metadata.hooks.custom]
    path = "hatch_build.py"
