[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KratosMultiphysics"
version = "10.3.0"
description = "Kratos Multiphysics Python Framework"
requires-python = ">=3.8"

authors = [
    { name = "Kratos Multiphysics Developers", email = "kratos@cimne.upc.edu" },
]

dependencies = [
    "numpy>=1.20"
]

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"KratosMultiphysics" = "KratosMultiphysics"
"libs" = "KratosMultiphysics/.libs"

[tool.hatch.build.targets.editable]

[tool.hatch.build.targets.editable.force-include]
"KratosMultiphysics" = "KratosMultiphysics"
"libs" = "KratosMultiphysics/.libs"